# create3crunch

./: Cargo.toml  Dockerfile  README.md  kernel_src.cl
src/: lib.rs  main.rs
src/kernels/: keccak256.cl
