[package]
name = "create3crunch"
version = "0.1.0"
authors = ["philogy"]
edition = "2021"
rust-version = "1.65"

[dependencies]
alloy-primitives = { version = "0.5", features = ["rand", "rlp"] }
byteorder = "1.5"
clap = { version = "4.5.4", features = ["derive"] }
clap-num = "1.1.1"
console = "0.15"
fs4 = "0.7"
ocl = "0.19"
rand = "0.8"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
rustc-hash = "1.1"
separator = "0.4.1"
serde_json = "1.0.119"
terminal_size = "0.3.0"
tokio = { version = "1.38.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1

[features]
default = []
asm = ["alloy-primitives/asm-keccak"]
